<resources>
    <string name="app_name">MyBiodata</string>
    <string name="about_developer">About Developer</string>
    <string name="developer_name">Fadhel Aqiel Putra S</string>
    <string name="dial_map">Dial Map</string>
    <string name="dial_email">Dial Email</string>
    <string name="dial_number">Dial Number</string>
    <string name="nim">A11.2019.12216</string>
    <string name="desc_me">Saya adalah mahasiswa teknik informatika udinus saya masuk pada angkatan 19.</string>
    <string name="hobby_desc">Hobby saya adalah bermain bola basket. Basket for lyfe!</string>
</resources>