<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/profile_account_developer"
    android:title="@string/about_developer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:src="@drawable/fdhl"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>


        <TextView
            android:id="@+id/name_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@+id/img_item_photo"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/developer_name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nim"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="@string/hobby_desc"/>


        <TextView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@+id/name_dev"
            android:layout_marginTop="10dp"
            android:text="@string/desc_me"
            android:textAlignment="center"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btn_dial_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/dial_number"/>

        <Button
            android:id="@+id/btn_dial_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="70dp"
            android:text="@string/dial_email" />

        <Button
            android:id="@+id/btn_dial_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/dial_map"/>

    </LinearLayout>

</ScrollView>